# acp

./: CONTRIBUTING.md  LICENSE  NAMING.md  README.md  SPEC.md  agents.md
.circleci/: config.yml
.github/workflows/: acp-provenance.yml  whence-provenance.yml
cli/: CLI.md  pyproject.toml
cli/src/git_whence/: __main__.py  config.py  envelope.py  exitcodes.py  git.py  hashing.py  ids.py  main.py  queue.py  redaction.py  trace.py
cli/src/git_whence/commands/: attach.py  fetch.py  init.py  log.py  push.py  queue_cmd.py  reattach.py  record.py  report.py  show.py  verify.py
cli/tests/: conftest.py  test_envelope.py  test_hashing.py  test_integration.py  test_redaction.py
sample/: broken.md  untracked-change.md
schema/: whence-trace-v0.1.0.json
scripts/: acp-bootstrap.sh  whence-bootstrap.sh
