[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "git-whence"
version = "0.1.0"
description = "Reference implementation of ACP (AI Code Provenance)"
readme = "CLI.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "ACP Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
git-whence = "git_whence.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
